Fix select search overlapping items

--- a/quartz-js/components/select/styles/select.scss
+++ b/quartz-js/components/select/styles/select.scss
@@ -64,7 +64,7 @@ $border_color: #8d9da6;
     min-height: 150px;
   }
   .c-select--options {
-    margin-top: 70px;
+    margin-top: 80px;
   }
 }
 .c-select--options {
